--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "sonar": "node sonar-project.js"
     },
     "dependencies": {
-         "express": "^4.16.3"
+         "express": "^4.16.3",
+        "sonarqube-scanner" : "*"
          
     },
     "optionalDependencies": {
