--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-         "start": "nodemon index.js",
+         "start": "node index.js",
         "sonar": "node sonar-project.js",
         "prod": "node index.js"
     },
