--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
          "start": "node index.js",
-        "sonar": "node sonar-project.js",
+        "sonar": "sonar-scanner",
         "prod": "node index.js"
     },
     "dependencies": {
